Some appliance fields in SOAP message are changed to be optional